# fltk-text-editor

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: editor.cpp
